feat(core): fuse EMA RSI ATR MACD VWAP with risk rejection